# docs/swagger.json
@@ -451,6 +451,64 @@
                 }
             }
         },
+        "/api/v1/authors/top-subscribed": {
+            "get": {
+                "description": "Get paginated top authors ranked by subscriber count",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Subscriptions"
+                ],
+                "summary": "Get top subscribed authors",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "default": 1,
+                        "description": "Page number",
+                        "name": "page",
+                        "in": "query"
+                    },
+                    {
+                        "maximum": 100,
+                        "type": "integer",
+                        "default": 20,
+                        "description": "Page size",
+                        "name": "pageSize",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "429": {
+                        "description": "Too Many Requests",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/authors/{authorId}/blogs/slug/{slug}": {
             "get": {
                 "description": "Get a blog post for an author using its slug",
@@ -5517,6 +5575,9 @@
                     "type": "integer"
                 },
                 "total": {
+                    "type": "integer"
+                },
+                "totalItems": {
                     "type": "integer"
                 },
                 "totalPages": {
